--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,10 +7,16 @@ on:
 jobs:
   lint:
     name: lint
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: true
+
+      - uses: extractions/setup-just@v1
+        with:
+          just-version: 1.14
 
       - name: lint
-        run: make lint
+        run: just lint
