database: vendor bitnami postgresql 10.16.2 chart that is no longer published
Bitnami pulled all the PostgreSQL 12 charts including the one we use.
Vendor it for now until we can upgrade to a more recent version.

--- a/apps/database/Chart.yaml
+++ b/apps/database/Chart.yaml
@@ -9,4 +9,4 @@ dependencies:
 - name: postgresql
   alias: pg12
   version: 10.16.2
-  repository: https://charts.bitnami.com/bitnami
+  repository: file://../../charts/postgresql/10.16.2
