--- a/apps/database/values.yaml
+++ b/apps/database/values.yaml
@@ -1,3 +1,10 @@
+cnpg:
+  # Forcing `nameOverride` is workaround for
+  # https://github.com/cloudnative-pg/cloudnative-pg/issues/2466
+  nameOverride: cloudnative-pg
+  image:
+    tag: 1.22.1
+
 pg12:
   image:
     tag: 12.9.0-debian-10-r87
