database: use official postgres container image for backup job
Looks like Bitnami pulled all their container images that were published
more than a month ago. :(

Use the official alpine-based image for `pg_dumpall` and I'll switch the
server image in a later commit.

--- a/apps/database/templates/backup-cronjob.yaml
+++ b/apps/database/templates/backup-cronjob.yaml
@@ -37,13 +37,13 @@ spec:
               name: pg12-postgres-cert
           containers:
           - name: pg12-backup
-            image: bitnami/postgresql:12.9.0-debian-10-r62
+            image: library/postgres:12-alpine
             imagePullPolicy: IfNotPresent
             command:
             - /bin/sh
             args:
             - -c
-            - umask 0177 ; /opt/bitnami/postgresql/bin/pg_dumpall -h app-database-pg12 -p 6432 -U postgres > /backup/pg12_dump_$(date -u +%H).sql
+            - umask 0177 ; /usr/local/bin/pg_dumpall -h app-database-pg12 -p 6432 -U postgres > /backup/pg12_dump_$(date -u +%H).sql
             env:
             - name: PGSSLMODE
               value: "require"
